loading calendar indicator

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   popover: ^0.2.9
   scroll_to_index: ^3.0.1
+  loading_animation_widget: ^1.2.0+4
 
 
 
